<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Game Timer</string>
    <string name="action_settings">설정</string>

    <string name="reset_timer">타이머 초기화</string>
    <string name="reset_timer_confirm_msg">타이머를 초기화 하시겠습니까?</string>
    <string name="reset_timer_msg">타이머를 초기화 했습니다.</string>

    <string name="init_timer">기본값으로</string>
    <string name="init_timer_confirm_msg">기본값으로 초기화 하시겠습니까?</string>
    <string name="init_timer_msg">기본값으로 초기화 했습니다.</string>

    <string name="back_press_ignore_msg">해당 버튼은 지원하지 않습니다.</string>

    <string name="tab1_title">타이머</string>
    <string name="tab2_title">타이머설정</string>
    <string name="tab3_title">설정</string>

    <string name="tab1_tag">TimerTimelineFragment</string>
    <string name="tab2_tag">SettingTimelineFragment</string>
    <string name="tab3_tag">SettingFragment</string>

    <string name="name_field">이름</string>
    <string name="timer_field">사용가능 시간 : %d분</string>
    <string name="remain_timer_filed">남은 시간 : %1$d분 %2$d초</string>
    <string name="timer_start">게임 시작</string>
    <string name="timer_stop">게임 멈춤</string>

    <string name="setting_name_title">이름을 변경하세요</string>
    <string name="setting_name_spinner_title">변경할 이름을 선택하세요</string>
    <string name="setting_name_save_msg">이름이 저장되었습니다</string>
    <string name="name1_default">첫째</string>
    <string name="name2_default">둘째</string>
    <string name="name3_default">세째</string>

    <string name="setting_timer_title">시간을 변경하세요(분)</string>
    <string name="setting_timer_spinner_title">변경할 시간을 선택하세요</string>
    <string name="setting_timer_min_value_msg">최소 시간은 %d 입니다.</string>
    <string name="setting_timer_save_msg">시간이 저장되었습니다</string>

    <string name="input_confirm">저장</string>
    <string name="clear_confirm">삭제</string>
    <string name="confirm">확인</string>
    <string name="cancel">취소</string>
    <string name="load_log_select_by_index">이름</string>
    <string name="load_log_select_by_index_error_msg">이름이 선택되지 않았습니다</string>
    <string name="load_log_by_index_title">로그 불러올 이름 선택</string>
    <string name="load_log_select_by_date">날짜</string>
    <string name="load_log_by_date_title">로그 불러올 날짜 선택</string>
    <string name="calendar_prev_month_btn">이전달</string>
    <string name="calendar_next_month_btn">다음달</string>
    <string name="load_log_graph">그래프</string>
    <string name="load_log">불러오기</string>
    <string name="delete_all_log">모두삭제</string>
    <string name="load_log_empty_msg">로그가 없습니다</string>

    <string name="delete_all_log_title">모든 로그 삭제</string>
    <string name="delete_all_log_confirm_msg">모든 로그를 삭제하시겠습니까?</string>
    <string name="delete_all_log_msg">모든 로그가 삭제되었습니다</string>

    <string name="notification_msg">[ %d ]분이 지났습니다.</string>

    <string name="setting_photo_title">사진을 변경하세요</string>
    <string name="setting_photo_save_msg">사진이 저장되었습니다</string>
    <string name="log_data_empty_msg">해당 로그가 없습니다</string>

    <string name="permission_group_sms">SMS</string>
    <string name="permission_group_storage">저장</string>
    <string name="permission_rational_gametimer">Game Timer를 사용하려면 SMS, 저장소 권한이 필요합니다.</string>
</resources>
