<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$TimerSettingFragment" >

    <LinearLayout
        android:id="@+id/photo_setting_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:background="@drawable/comm_btn_invite_kakao_normal"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dip"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="2dip"
            android:layout_marginLeft="2dip"
            android:layout_marginRight="2dip"
            android:background="@drawable/comm_btn_invite_daum_pressed"
            android:textSize="18dip"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/setting_photo_title" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <Spinner
                android:id="@+id/photo_setting_spinner"
                android:layout_width="80dip"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dip" />

            <LinearLayout
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="10dip"
                android:gravity="center">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dip"
                    android:background="@drawable/comm_btn_invite_sms_normal">

                    <ImageView
                        android:id="@+id/photo"
                        android:layout_width="@dimen/photo_size"
                        android:layout_height="@dimen/photo_size"
                        android:gravity="center_horizontal"
                        android:scaleType="fitCenter"
                        android:src="@drawable/photo_add"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <Button
                    android:id="@+id/save_photo_btn"
                    android:layout_width="50dip"
                    android:layout_height="40dip"
                    android:layout_marginLeft="5dip"
                    android:layout_marginRight="5dip"
                    android:background="@drawable/input_confirm_btn"
                    android:text="@string/input_confirm"
                    android:textColor="@drawable/input_confirm_btn_text_color"
                    android:textSize="17dip"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/delete_photo_btn"
                    android:layout_width="50dip"
                    android:layout_height="40dip"
                    android:layout_marginTop="10dip"
                    android:layout_marginLeft="5dip"
                    android:layout_marginRight="5dip"
                    android:background="@drawable/input_confirm_btn"
                    android:text="@string/clear_confirm"
                    android:textColor="@drawable/input_confirm_btn_text_color"
                    android:textSize="17dip"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/photo_setting_layout"
        android:layout_marginTop="10dip"
        android:background="@drawable/comm_btn_invite_daum_normal"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dip"
                android:layout_marginRight="5dip"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/load_log_select_btn"
                    android:layout_width="80dip"
                    android:layout_height="40dip"
                    android:background="@drawable/input_confirm_btn"
                    android:text="@string/load_log_select_by_index"
                    android:textColor="@drawable/input_confirm_btn_text_color"
                    android:textSize="17dip"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/load_log_btn"
                    android:layout_width="80dip"
                    android:layout_height="40dip"
                    android:layout_marginLeft="5dip"
                    android:background="@drawable/input_confirm_btn"
                    android:text="@string/load_log"
                    android:textColor="@drawable/input_confirm_btn_text_color"
                    android:textSize="17dip"
                    android:textStyle="bold" />

                <View
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/delete_all_log_btn"
                    android:layout_width="80dip"
                    android:layout_height="40dip"
                    android:background="@drawable/input_confirm_btn"
                    android:text="@string/delete_all_log"
                    android:textColor="@drawable/input_confirm_btn_text_color"
                    android:textSize="17dip"
                    android:textStyle="bold" />
            </LinearLayout>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dip"
                android:background="@drawable/chat_btn_basic_normal"
                android:fadeScrollbars="true"
                android:fadingEdge="none"
                android:fillViewport="true">

               <!--
               <TextView
                    android:id="@+id/log_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="5dip"
                    android:textColor="@color/black"
                    android:textSize="13dip"
                    android:hint="@string/log_data_hit_msg"/>
                -->

                <TableLayout
                    android:id="@+id/log_table"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="3dip"
                    android:layout_marginRight="3dip"
                    android:stretchColumns="*"
                    android:textColor="@color/black"
                    android:textSize="13dip" />
            </ScrollView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/init_timer_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/log_layout"
            android:layout_marginTop="5dip"
            android:layout_marginBottom="5dip"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/init_timer"
                android:layout_width="150dip"
                android:layout_height="40dip"
                android:gravity="center"
                android:text="@string/init_timer"
                android:textSize="15dip"
                android:textColor="@color/white"
                android:background="@drawable/stop_btn" />
        </LinearLayout>
    </LinearLayout>




</RelativeLayout>
